--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="MongoDB.Bson" Version="2.10.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Google.Apis.YouTube.v3" Version="1.42.0.1758" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="secrets.json" />
