--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-  	<LangVersion>8.0</LangVersion>
+  	<LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +23,5 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.0" />
-    <PackageReference Include="Hangfire" Version="1.7.9" />
   </ItemGroup>
 </Project>
