--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   	<LangVersion>default</LangVersion>
+  	<Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
