--- a/Service.PublishScheduleDetection/Service.PublishScheduleDetection.csproj
+++ b/Service.PublishScheduleDetection/Service.PublishScheduleDetection.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>dotnet-Service.PublishScheduleDetection-19C2A1DC-0C6F-4BE8-A96D-D22A40A00CBD</UserSecretsId>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Autofac" Version="4.9.4" />
-    <PackageReference Include="Microsoft.ML" Version="1.4.0" />
-    <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.4.0" />
     <PackageReference Include="Microsoft.ML.Mkl.Redist" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
@@ -19,6 +18,5 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DI\" />
-    <Folder Include="Entities\" />
   </ItemGroup>
 </Project>
